增加 - 全部完成、全部取消、删除已完成

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 					<h3>ToDo</h3>
 					<ul id="todo">
 					</ul>
+					<a class="all" href="javascript: allDo(false)">All Done</a>
 				</span>
 				<span class="list">
 					<h3>Done</h3>
 					<ul id="done">
 					</ul>
+					<a class="all" href="javascript: allDo(true)">All Undone</a>
+					<a class="all" href="javascript: deleteAllDone()">Delet Done</a>
 				</span>
 			</section>
 		</div>
