调了一下样式

--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
 					<ul id="todo">
 					</ul>
 					<a class="all" href="javascript: allDo(false)">All Done</a>
+					<a class="all" href="javascript: deleteAll(true)">Delete</a>
 				</span>
 				<span class="list">
 					<h3>Done</h3>
 					<ul id="done">
 					</ul>
 					<a class="all" href="javascript: allDo(true)">All Undone</a>
-					<a class="all" href="javascript: deleteAllDone()">Delet Done</a>
+					<a class="all" href="javascript: deleteAll(false)">Delete</a>
 				</span>
 			</section>
 		</div>
 
 		<div id="color-variations">
-			<a id="option-toggle"><img id="color-icon" src="image/setting.svg" /></a>
+			<a id="setting"><img src="image/setting.svg" /></a>
 			<h3>Preset Colors</h3>
 			<ul>
 				<li><a class="selection" href="javascript: void(0);" data-theme="blue"></a></li>
@@ -44,7 +45,7 @@
 				<li><a class="selection" href="javascript: void(0);" data-theme="sapphire"></a></li>
 				<li><a class="selection" href="javascript: void(0);" data-theme="turquoise"></a></li>
 				<li><a class="selection" href="javascript: void(0);" data-theme="orange"></a></li>
-				<li><a class="selection" href="javascript: void(0);" data-theme="lightblue"></a></li>
+				<li><a class="selection" href="javascript: void(0);" data-theme="yellow"></a></li>
 				<li><a class="selection" href="javascript: void(0);" data-theme="brown"></a></li>
 				<li><a class="selection" href="javascript: void(0);" data-theme="green"></a></li>
 			</ul>
