--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
 					</label>
 				</span>
 				<span class="list">
-					<h3>ToDo</h3>
+					<h3>
+						ToDo
+						<a id="show-todo" class="display" href="javascript: folder(true)"><img src="image/down.svg" /></a>
+					</h3>
 					<ul id="todo">
 					</ul>
 					<a class="all" href="javascript: allDo(false)">All Done</a>
 					<a class="all" href="javascript: deleteAll(true)">Delete</a>
 				</span>
 				<span class="list">
-					<h3>Done</h3>
+					<h3>
+						Done
+						<a id="show-done" class="display" href="javascript: folder(false)"><img src="image/down.svg" /></a>
+					</h3>
 					<ul id="done">
 					</ul>
 					<a class="all" href="javascript: allDo(true)">All Undone</a>
